[metadata]
name = PietInterpreter
version = 1.0.4
author = Marius Göcke
author_email = marius.goecke@gmail.com
description = PietInterpreter is an interpreter for Piet-programs.
long_description = file:ReadMe.md
long_description_content_type = text/markdown
url = https://github.com/anionDev/PietInterpreter
classifiers =
            "Programming Language :: Python :: 3.10",
            "License :: OSI Approved :: MIT License",
            "Operating System :: POSIX :: Linux",
            "Operating System :: Microsoft :: Windows :: Windows 10",
            "Topic :: Terminals",
keywords = esoteric programming language

[options]
packages = PietInterpreter
zip_safe = False
include_package_data = False
python_requires = >=3.10
install_requires =
    numpy>=1.22.3
    Pillow>=9.1.0
    pygubu>=0.20.1
    ScriptCollection>=3.4.49

[options.packages.find]
exclude = PietInterpreterTests

[options.entry_points]
console_scripts =
    Piet = PietInterpreter.PietInterpreterCore:main
